--- a/web-application.html
+++ b/web-application.html
@@ -39,7 +39,7 @@
 
 
                 <a class="navbar-brand font-weight-semibold" href="./index.html">
-                    <img class="img-fluid" src="./images/logos/logo-dark.png" alt="">
+                    <img class="img-fluid" style="width: 40px;" src="./images/logos/logo-dark.png" alt="">
                 </a>
                 <button class="btn btn-primary btn-sm d-lg-none">Buy</button>
 
