--- a/web-application.html
+++ b/web-application.html
@@ -283,14 +283,14 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-10" data-aos="fade-up" data-aos-delay="200">
+                        <!-- <div class="col-sm-10" data-aos="fade-up" data-aos-delay="200">
                             <picture>
                                 <source srcset="./images/ui/dashboard-04.webp" type="image/webp">
                                 <source srcset="./images/ui/dashboard-04.jpg" type="image/jpg">
                                 <img src="./images/ui/dashboard-04.jpg" alt=""
                                     class="img-fluid hover-scale rounded hover-shadow-smooth-1 border">
                             </picture>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -1118,14 +1118,7 @@
 
             <div class="container">
                 <div class="row justify-content-lg-between pb-5">
-                    <div class="col-lg-3 ml-lg-auto mb-5 mb-lg-0">
-                        <a href="#" class="d-block pb-5">
-                            <img class="img-fluid" src="./images/logos/logo-light.png" alt="logo">
-                        </a>
-
-                        <p class="font-size-sm">We are based in Victorville, CA. We're part of a UI Champ and our
-                            customers love what we do</p>
-                    </div>
+                   
 
                     <div class="col-6 col-md-3 col-lg mb-5 mb-lg-0">
                         <h5>Company</h5>
